# coursework7

./: .env.sample  README.md  docker-compose.yaml  dump.rdb  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_time.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_managers.py  0004_user_username.py  0005_alter_user_email.py
